--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <main>
         <!-- Form section to add new task -->
-        <section id="new-task-section">
+        <section id="new-todo-section">
             <form id="todo-form">
                 <input type="text" id="todo-input" placeholder="Enter a new task" />
                 <button type="submit">Add Task</button>
@@ -25,8 +25,8 @@
         </section>
 
         <!-- Section to display new tasks -->
-        <section id="task-list-section">
-            <ul id="task-list"></ul>
+        <section id="todo-list-section">
+            <ul id="todo-list"></ul>
         </section>
 
     </main>
